<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/bg_simple" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/random_video_call"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/talk_with_random_people_from_all_around_the_globe"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/get_started"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:layout_marginTop="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/text_2" />


</androidx.constraintlayout.widget.ConstraintLayout>