<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bg_simple"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/please_login_to_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <View
        android:id="@+id/view_google_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/google_button_background"
        app:layout_constraintTop_toBottomOf="@id/text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_google"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/google"
        android:contentDescription="@string/app_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/text_google"
        app:layout_constraintStart_toStartOf="@id/view_google_button"
        app:layout_constraintTop_toTopOf="@id/view_google_button"
        app:layout_constraintBottom_toBottomOf="@id/view_google_button"/>

    <TextView
        android:id="@+id/text_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@id/image_google"
        app:layout_constraintEnd_toEndOf="@id/view_google_button"
        app:layout_constraintTop_toTopOf="@id/view_google_button"
        app:layout_constraintBottom_toBottomOf="@id/view_google_button"/>

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/by_continuing_you_are_agreeing_to_our_terms_and_privacy_policy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/view_google_button" />
</androidx.constraintlayout.widget.ConstraintLayout>