<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/bg_blur"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="16sp"
            android:layout_marginStart="16sp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/coin_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center|end"
            android:padding="12dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/coins_show_background"
            app:layout_constraintEnd_toStartOf="@id/coin_box_layout"
            app:layout_constraintTop_toTopOf="@id/imageView2"
            app:layout_constraintBottom_toBottomOf="@id/imageView2">
            <TextView
                android:id="@+id/textView_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_have"
                android:layout_marginEnd="2dp"
                android:includeFontPadding="false"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_coin"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coin_box_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="12dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/coins_show_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView2"
            app:layout_constraintBottom_toBottomOf="@id/imageView2">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_treasure"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationRadar"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:lottie_rawRes="@raw/radar"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_colorFilter="@color/white"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_coin"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            app:layout_constraintStart_toStartOf="@id/lottieAnimationRadar"
            app:layout_constraintEnd_toEndOf="@id/lottieAnimationRadar"
            app:layout_constraintTop_toTopOf="@id/lottieAnimationRadar"
            app:layout_constraintBottom_toBottomOf="@id/lottieAnimationRadar"/>

        <TextView
            android:id="@+id/text_user_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/lottieAnimationRadar"
            app:layout_constraintEnd_toEndOf="@id/lottieAnimationRadar"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimationRadar"/>

        <TextView
            android:id="@+id/text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/persons_are_looking"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="@id/lottieAnimationRadar"
            app:layout_constraintEnd_toEndOf="@id/lottieAnimationRadar"
            app:layout_constraintTop_toBottomOf="@id/text_user_count"/>

        <LinearLayout
            android:id="@+id/coin_layout2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center|end"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/coins_show_background"
            app:layout_constraintEnd_toEndOf="@id/lottieAnimationRadar"
            app:layout_constraintTop_toBottomOf="@id/text_2"
            app:layout_constraintStart_toStartOf="@id/lottieAnimationRadar">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin"
                android:layout_marginEnd="2dp"
                android:includeFontPadding="false"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_coin"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <Button
            android:id="@+id/findButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/find"
            app:cornerRadius="20dp"
            android:padding="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/lottieAnimationRadar"
            app:layout_constraintStart_toStartOf="@id/lottieAnimationRadar"
            app:layout_constraintTop_toBottomOf="@id/coin_layout2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>