<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.CallActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/person_profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:layout_marginTop="16sp"
        android:background="@drawable/user_background"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_coin"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/city"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/image_video_call"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_video_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_audio_call"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_audio_call"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_unmute_normal"
        app:layout_constraintBottom_toBottomOf="@id/image_video_call"
        app:layout_constraintEnd_toStartOf="@id/image_call_end"
        app:layout_constraintStart_toEndOf="@id/image_video_call" />

    <ImageView
        android:id="@+id/image_call_end"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_endcall_normal"
        app:layout_constraintBottom_toBottomOf="@id/image_video_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_audio_call" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_video_call,image_audio_call,image_call_end" />

</androidx.constraintlayout.widget.ConstraintLayout>